--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,15 @@
 
 @media screen and (max-width: 1200px) {
     .section-container {
-        padding: 0 48px;
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
 
 @media screen and (max-width: 544px) {
     .section-container {
-        padding: 0 24px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
